# dragon

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  ChangeLog  HACKING  Messages.sh  PKGBUILD  README  README.md  REUSE.toml  SConstruct  TODO  config.h.cmake  config.h.in  configure  snapcraft.yaml
.reuse/: dep5
cmake/: CMakeLists.txt  FindXine.cmake
doc/: CMakeLists.txt  index.docbook  man-dragon.1.docbook
doc/dragonplayer/: index.docbook
doc/en/: CMakeLists.txt  index.docbook
misc/: 16x16_dragonplayer.svgz  32x32_dragonplayer.svgz  48-apps-dragonplayer.png.license  CMakeLists.txt  codeine.desktop  codeine_part.desktop  codeine_play_dvd.desktop  codeineui.rc  dragonplayer-openaudiocd.desktop  dragonplayer-opendvd.desktop  dragonplayer.appdata.xml  dragonplayer.desktop  dragonplayer_part.desktop  dragonplayer_part.desktop.in  dragonplayer_part.json.in  dragonplayer_play_dvd.desktop  dragonplayerrc  dragonplayerui.rc  hisc-app-dragonplayer.svgz  org.kde.dragonplayer.appdata.xml  org.kde.dragonplayer.desktop  oxsc-actions-player-volume-muted.svgz  sc-actions-player-volume-muted.svgz  sc-apps-dragonplayer.svgz  videoplayer.desktop  videoplayer_play_dvd.desktop  videoplayerui.rc
po/ar/: dragonplayer.po
po/ast/: dragonplayer.po
po/be/: dragonplayer.po
po/bg/: dragonplayer.po
po/bs/: dragonplayer.po
po/ca/: dragonplayer.po
po/ca/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/ca@valencia/: dragonplayer.po
po/cs/: dragonplayer.po
po/da/: dragonplayer.po
po/de/: dragonplayer.po
po/de/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/el/: dragonplayer.po
po/en_GB/: dragonplayer.po
po/eo/: dragonplayer.po
po/es/: dragonplayer.po
po/es/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/et/: dragonplayer.po
po/et/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/eu/: dragonplayer.po
po/fi/: dragonplayer.po
po/fr/: dragonplayer.po
po/fr/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/ga/: dragonplayer.po
po/gl/: dragonplayer.po
po/gl/docs/dragonplayer/: index.docbook
po/he/: dragonplayer.po
po/hi/: dragonplayer.po
po/hr/: dragonplayer.po
po/hu/: dragonplayer.po
po/ia/: dragonplayer.po
po/id/: dragonplayer.po
po/id/docs/dragonplayer/: index.docbook
po/is/: dragonplayer.po
po/it/: dragonplayer.po
po/it/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/ja/: dragonplayer.po
po/ka/: dragonplayer.po
po/kk/: dragonplayer.po
po/km/: dragonplayer.po
po/ko/: dragonplayer.po
po/ku/: dragonplayer.po
po/lt/: dragonplayer.po
po/lv/: dragonplayer.po
po/mr/: dragonplayer.po
po/nb/: dragonplayer.po
po/nds/: dragonplayer.po
po/nl/: dragonplayer.po
po/nl/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/nn/: dragonplayer.po
po/oc/: dragonplayer.po
po/pa/: dragonplayer.po
po/pl/: dragonplayer.po
po/pl/docs/dragonplayer/: index.docbook
po/pt/: dragonplayer.po
po/pt/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/pt_BR/: dragonplayer.po
po/pt_BR/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/ro/: dragonplayer.po
po/ru/: dragonplayer.po
po/ru/docs/dragonplayer/: index.docbook
po/sa/: dragonplayer.po
po/sk/: dragonplayer.po
po/sl/: dragonplayer.po
po/sl/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/sq/: dragonplayer.po
po/sr/: dragonplayer.po
po/sr/docs/dragonplayer/: index.docbook  l10n-track  man-dragon.1.docbook
po/sr@ijekavian/: dragonplayer.po
po/sr@ijekavianlatin/: dragonplayer.po
po/sr@latin/: dragonplayer.po
po/sr@latin/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/sv/: dragonplayer.po
po/sv/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/th/: dragonplayer.po
po/tr/: dragonplayer.po
po/tr/docs/dragonplayer/: CMakeLists.txt  index.docbook  man-dragon.1.docbook
po/ug/: dragonplayer.po
po/uk/: dragonplayer.po
po/uk/docs/dragonplayer/: index.docbook  man-dragon.1.docbook
po/wa/: dragonplayer.po
po/zh_CN/: dragonplayer.po
po/zh_TW/: dragonplayer.po
src/: CMakeLists.txt  FAQ  SConscript  TODO  backend.cpp  backend.h  codeine.h  debug.h  dragon.h  fileopen.cpp  fileopen.h  main.cpp  messageBox.h  mxcl.library.cpp  mxcl.library.h  renderer.h  sandbox.cpp  sandbox.h  sourcemodel.cpp  sourcemodel.h
src/app/: CMakeLists.txt  Messages.sh  SConscript  actions.cpp  actions.h  adjustSizeButton.cpp  adjustSizeButton.h  analyzer.cpp  analyzer.h  audioView.cpp  audioView.h  audioView2.cpp  audioView2.h  audioView2.ui  bluRayProbe.cpp  bluRayProbe.h  captureFrame.cpp  config.h  configfn.h  discScanner.cpp  discScanner.h  discSelectionDialog.cpp  discSelectionDialog.h  dragonplayer.qrc  extern.h  fht.cpp  fht.h  fullScreenAction.cpp  fullScreenAction.h  fullScreenToolBarHandler.cpp  fullScreenToolBarHandler.h  insertAspectRatioMenuItems.cpp  listView.cpp  loadView.cpp  loadView.h  loadView.ui  main.cpp  mainWindow.cpp  mainWindow.h  part.cpp  (+35 more)
src/app/analyzer/: analyzerBase.cpp  analyzerBase.h  blockAnalyzer.cpp  blockAnalyzer.h  fht.cpp  fht.h
src/dbus/: mpristypes.cpp  mpristypes.h  org.kde.dragon.player.xml  playerDbusHandler.cpp  playerDbusHandler.h  root.xml  rootDbusHandler.cpp  rootDbusHandler.h  trackListDbusHandler.cpp  trackListDbusHandler.h
src/kguiaddons-backport/: ksysteminhibitor.cpp  ksysteminhibitor.h  systeminhibitor.h
src/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
src/part/: SConscript  part.cpp  part.h  toolbar.cpp  toolbar.h  videoWindow.cpp  videoWindow.h  xineEngine.cpp
src/qml/: AboutPage.qml  ControlsBar.qml  IconToolButton.qml  Main.qml  OverlayPopup.qml  PlayerPage.qml  VolumeButton.qml  WelcomeView.qml  main.qml  qml.qrc
